force-app/main/default/objects/Job__c/Job__c.object-meta.xml
<CustomObject>
    <description>Jobs are made up of an Order + Delivery. Jobs are assigned to Drivers to complete.</description>
    <label>Job</label>
    <nameField>
        <displayFormat>Job-{YY}{MM}{DD}-{0000}</displayFormat>
        <label>Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>