force-app/main/default/objects/Job__c/fields/Related_Job__c.field-meta.xml
<CustomField>
    <fullName>Related_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Job</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Related_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>