force-app/main/default/objects/Job__c/recordTypes/Can_Delivery.recordType-meta.xml
<RecordType>
    <fullName>Can_Delivery</fullName>
    <active>true</active>
    <label>Can Delivery</label>
</RecordType>