force-app/main/default/objects/Job__c/recordTypes/Can_Pickup.recordType-meta.xml
<RecordType>
    <fullName>Can_Pickup</fullName>
    <active>true</active>
    <label>Can Pickup</label>
</RecordType>