force-app/main/default/objects/Job__c/recordTypes/Can_Swap.recordType-meta.xml
<RecordType>
    <fullName>Can_Swap</fullName>
    <active>true</active>
    <label>Can Swap</label>
</RecordType>