force-app/main/default/objects/Job__c/recordTypes/Disposal.recordType-meta.xml
<RecordType>
    <fullName>Disposal</fullName>
    <active>true</active>
    <label>Disposal</label>
</RecordType>