force-app/main/default/objects/Job__c/recordTypes/Drop_and_Swap.recordType-meta.xml
<RecordType>
    <fullName>Drop_and_Swap</fullName>
    <active>true</active>
    <description>Shavings delivery + Can swap</description>
    <label>Drop and Swap</label>
</RecordType>