force-app/main/default/objects/Job__c/recordTypes/Dump_and_Return.recordType-meta.xml
<RecordType>
    <fullName>Dump_and_Return</fullName>
    <active>true</active>
    <description>Disposal of Can&apos;s contents + return of the Can</description>
    <label>Dump and Return</label>
</RecordType>