force-app/main/default/objects/Job__c/recordTypes/Shavings_Delivery.recordType-meta.xml
<RecordType>
    <fullName>Shavings_Delivery</fullName>
    <active>true</active>
    <description>Delivery of Shavings only.</description>
    <label>Shavings Delivery</label>
</RecordType>